# SmartRevuer

./: .gitignore  Makefile  README.md  presentation.html  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-20-smartrevuer-implementation.md
docs/superpowers/specs/: 2026-06-20-smartrevuer-design.md
src/smartrevuer/: __main__.py  cli.py  config.py  data.py  model.py  plots.py  visualization.py
tests/: test_data.py  test_model.py  test_plots.py  test_visualization.py
