[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartrevuer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.scripts]
smartrevuer = "smartrevuer.cli:run_pipeline"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
